# suresoft-hpc-workflow

./: .gitignore  .gitlab-ci.yml  CITATION.cff  CMakeLists.txt  LICENSE.md  Makefile  README.md  benchmark-gitlab-ci.yml  create-benchmark-ci.py  laplace-mpich-bind.job  laplace-mpich.job  laplace-native.job  laplace-openmpi.job  laplace.job  mpich_16.job  mpich_32.job  mpich_64.job  rocket-native.yml  rocket-openmpi.yml  rocket.yml
.devcontainer/: Dockerfile  devcontainer.json
Containers/: rockylinux9-mpich-bind.def  rockylinux9-mpich-hybrid.def  rockylinux9-mpich.def  rockylinux9-openmpi.def
example/: laplace-mpich-bind.job  rocket-mpich-bind.yml
hpc-rocket/: buildrocket.py  rocket-mpich-bind.yml  rocket-mpich.yml  rocket-native.yml  rocket.yml.template
img/: ci-stages.drawio  hpc-rocket.drawio  multistagebuild.drawio  workflow.graffle
jobfile/: jobfile_mpi
jobgeneration/: __main__.py  benchmark_ci.py  benchmark_plot.py  buildjob.py  buildrocket.py  clusterconfig.py  config.py  create-benchmark-ci.py  create_benchmark_ci.py  create_graph.py  generate_test_ci.py  hpc_rocket_files.py  logging.py  mpi.py  nodescaling.py  requirements.txt  slurm_jobs.py  test_ci.py  variants.py
jobgeneration/templates/: benchmark-ci.yml.j2  laplace.job.j2  rocket.yml.j2  tests-ci.yml.j2
laplace2d/src/: CMakeLists.txt  Parameter.h  main.cpp  utilities.h
reference_data/: lowres-test.avs
slurmjobs/: buildjob.py  laplace-mpich-bind.job  laplace.job.template
src/: CMakeLists.txt  Mapper2D.h  Parameter.h  main.cpp  main_mpi_blocking.cpp  main_mpi_starting_point.cpp  utilities.h
tests/: CMakeLists.txt  common.sh  highres-test  lowres-test  rocket.yml  test_Mapper2D.cpp
